changing name form package.json form Starter Kit to Starter-Kit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Starter Kit",
+  "name": "Starter-Kit",
   "version": "1.0.0",
   "description": "Starter Kit for Gulp enviroment",
   "main": "index.js",
